[package]
name = "reverse_proxy"
description = "TLS wrapper based on warp-reverse-proxy"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/pshc/reverse_proxy"
license = "ISC"
keywords = ["https"]

[dependencies]
hyper = "^0.14"
warp = { version = "0.3", features = ["multipart", "tls"] }
warp-reverse-proxy = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
